unpackaged/main/default/objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>Used for the Professional Services Team to track their time for client requests.</description>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Time Tracker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>