unpackaged/main/default/objects/Time_Tracker__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>The number of hours a rep enters into the time tracker.</description>
    <label>Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>