unpackaged/main/default/objects/Time_Tracker__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <description>Minutes a rep logs in the time tracker</description>
    <label>Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>