unpackaged/main/default/objects/Time_Tracker__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Value+ record</description>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Time Tracker</relationshipLabel>
    <relationshipName>Time_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>